# banking-simulation

./: .woodpecked.yml  CMakeLists.txt  Documentation.md  README.md
.forgejo/workflows/: build.yml
.github/workflows/: build.yml
SQL Banking Simulation/: main.cpp
SQL Banking Simulation.xcodeproj/: project.pbxproj
SQL Banking Simulation.xcodeproj/project.xcworkspace/xcuserdata/timleflem.xcuserdatad/: UserInterfaceState.xcuserstate
SQL Banking Simulation.xcodeproj/xcshareddata/xcschemes/: SQL Banking Simulation.xcscheme
SQL Banking Simulation.xcodeproj/xcuserdata/timleflem.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
SQL Banking Simulation.xcodeproj/xcuserdata/timleflem.xcuserdatad/xcschemes/: xcschememanagement.plist
data/: bank.db
include/: account.hpp  bank.hpp  customer.hpp  output.hpp  transaction.hpp
src/: account.cpp  bank.cpp  customer.cpp  main.cpp  transaction.cpp
